--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,400..900;1,100..900&display=swap');
+
+*{
+    font-family: "Raleway", sans-serif !important;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+
+}
+
+.raleway{
+    font-family: "Raleway", sans-serif !important;
+    font-weight: 300 !important;
+    font-style: normal !important;
+    font-size: 14px !important;
+}
+
+#inspire{
+    background-color: #ecebeb !important;
+}
+
+.swal2-actions{
+    color: white !important;
+}
+
 .glass {
     background: rgba(255, 255, 255, 0.5) !important;
     border-radius: 10px !important;
@@ -28,4 +53,42 @@
 
 .v-btn {
     text-transform: unset !important;
+}
+
+.userbottom {
+    bottom: 0;
+    width: 100%;
+    position: fixed;
+    z-index: 2
+}
+
+.mx-datepicker-main.mx-datepicker-popup{
+    z-index: 10000 !important;
+}
+
+.mx-datepicker{
+    width: 100% !important;
+}
+
+.mx-input{
+    font-size:16px !important;
+    height: 48px !important;
+}
+
+._12px{
+    font-size: 12px !important;
+}
+
+._13{
+    font-size: 13px !important;
+}
+
+.v-tab.v-tab-item--selected{
+    color: white !important;
+    background-color: rgba(11, 39, 64, 0.26);
+}
+
+.active-sidebar{
+    background-color: #0072ab !important;
+    color: white !important;
 }
